--- a/Javascript/dialogbox.html
+++ b/Javascript/dialogbox.html
@@ -25,6 +25,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      background: url(https://img.freepik.com/free-photo/painting-mountain-lake-with-mountain-background_188544-9126.jpg)
+        center;
+      background-size: cover;
     }
     .dialog {
       position: fixed;
@@ -36,42 +39,53 @@
       justify-content: center;
       align-items: center;
     }
-    .flex{
-        display: flex;
+    .flex {
+      display: flex;
     }
 
-    .backdrop{
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        background: rgba(0,0,0,0.3);
-        backdrop-filter: blur(3px);
+    .backdrop {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(3px);
     }
-    .dialog-content{
-        background: white;
-        position: relative;
-        border: 1px solid rgba(0,0,0,0.3);
-        padding: 12px;
-        border-radius: 8px;
+    .dialog-content {
+      background: white;
+      position: relative;
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      padding: 12px;
+      border-radius: 8px;
+      animation: fadeInDown 0.4s ease-in;
+    }
+    @keyframes fadeInDown {
+      from {
+        transform: translateY(-200px);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0px);
+        opacity: 1;
+      }
     }
   </style>
   <body>
     <section>
       <div>
-        this is text
         <button class="btn" onclick="showDialog()">Show dialog</button>
       </div>
     </section>
-    <div class="dialog flex">
-      <div class="backdrop"></div>
+    <div class="dialog">
+      <div class="backdrop" onclick="showDialog()"></div>
       <div class="dialog-content">This is dialog content</div>
     </div>
   </body>
   <script>
- const showDialog=()=>{
-    document.querySelector(".dialog").classlist.add('flex');
- }
+    const showDialog = () => {
+      document.querySelector(".dialog").classList.toggle("flex");
+      // document.querySelector('.backdrop').classList.('flex');
+    };
   </script>
 </html>
