--- a/Javascript/visibility.html
+++ b/Javascript/visibility.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   </head>
   <style>
     body {
@@ -56,12 +58,12 @@
           }
 
           input {
-            min-width: 200px;
+            min-width: 300px;
             margin-top: 2px;
             border: none;
 
-            &:active {
-              border: none;
+            &:focus, &:active{
+              outline: none;
             }
           }
         }
@@ -86,7 +88,7 @@
   <body>
     <!-- Form starts here -->
 
-    <section>
+    <section >
       <div class="login-form">
         <div class="login-title">Login</div>
         <div class="breaker"></div>
@@ -97,9 +99,14 @@
           </div>
           <div class="input-box">
             <label for="Password">Password</label>
-            <input type="password" name="password" placeholder="Enter password" />
+            <div class="password-box">
+                <input type="password" name="password" placeholder="Enter password" />
+                <span class="material-symbols-outlined">visibility</span>
+                <span class="material-symbols-outlined">visibility_off</span>
+            </div>
+
           </div>
-          <button class="login" onclick="authenticate()">Login</button>
+          <button type="submit">Login</button>
         </div>
       </div>
     </section>
@@ -125,5 +132,9 @@
         alert('incorrect username or password');
       }
     }
+
+    document.querySelector('.login-form').addEventListener('submit',(event)=>{
+        authenticate();
+    });
   </script>
 </html>
